crates/service/tests/diagnostics/snapshots/features__diagnostics__literal_operands__expected_instr.snap
---
source: crates/service/tests/diagnostics/literal_operands.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 27
        },
        "end": {
          "line": 0,
          "character": 52
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32]"
    },
    {
      "range": {
        "start": {
          "line": 0,
          "character": 36
        },
        "end": {
          "line": 0,
          "character": 37
        }
      },
      "severity": 1,
      "code": "literal-operands",
      "source": "wat",
      "message": "unexpected operand"
    }
  ]
}
