crates/service/tests/diagnostics/snapshots/features__diagnostics__literal_operands__float.snap
---
source: crates/service/tests/diagnostics/literal_operands.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 19
        },
        "end": {
          "line": 4,
          "character": 21
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "expected floating-point number"
    }
  ]
}
