crates/service/tests/diagnostics/snapshots/features__diagnostics__literal_operands__int.snap
---
source: crates/service/tests/diagnostics/literal_operands.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 19
        },
        "end": {
          "line": 3,
          "character": 22
        }
      },
      "severity": 1,
      "code": "literal-operands",
      "source": "wat",
      "message": "expected integer"
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 19
        },
        "end": {
          "line": 4,
          "character": 22
        }
      },
      "severity": 1,
      "code": "literal-operands",
      "source": "wat",
      "message": "expected integer"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 20
        },
        "end": {
          "line": 5,
          "character": 23
        }
      },
      "severity": 1,
      "code": "literal-operands",
      "source": "wat",
      "message": "expected integer"
    }
  ]
}
